task4 - Media Query

--- a/game_info.html
+++ b/game_info.html
@@ -130,7 +130,7 @@
                     width="350" height="250" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16931.531041812148!2d-87.86670154457485!3d42.317174614872116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sus!4v1675483013966!5m2!1ses-419!2sus" target="mapa">W3Schools.com</a></p>
+                <!-- <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16931.531041812148!2d-87.86670154457485!3d42.317174614872116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sus!4v1675483013966!5m2!1ses-419!2sus" target="mapa">South</a></p> -->
             <div id="datos">
                 <p><b>Facility Type:</b> Outdoor</p>
                 <p><b>Additional Information:</b> If deemed necessary by MDHL james may be shortened or cancelled
