--- a/rules.html
+++ b/rules.html
@@ -32,7 +32,7 @@
     <main>
         <div id="titulo">
             <h3>RULES OF PLAY & POLICIES</h3>
-            <h3 id="sub">IHF rules shall govern MDHL play except as modified herein.</h3>
+            <h3 class="sub">IHF rules shall govern MDHL play except as modified herein.</h3>
         </div>
 
         <div id="contenido">
