task4 - cambios link

--- a/game_info.html
+++ b/game_info.html
@@ -19,12 +19,12 @@
         </div>
         <div id="header2">
             <nav>
-                <a href="./home.html">Home</a>
+                <a href="/home.html">Home</a>
                 <a class="actual" href="#">Game Info</a>
-                <a href="./rules.html">Rules</a>
-                <a href="./aboutMDHL.html">About</a>
-                <a href="./registration.html">Registration</a>
-                <a href="./contact.html">Contact</a>
+                <a href="/rules.html">Rules</a>
+                <a href="/aboutMDHL.html">About</a>
+                <a href="/registration.html">Registration</a>
+                <a href="/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -119,8 +119,8 @@
                     width="350" height="250" allowfullscreen="" loading="lazy"></iframe>
                 <iframe name="mapa" title="Greenbay"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11800.042412557958!2d-87.8688817!3d42.3209726!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1675470025073!5m2!1ses-419!2sar"
-                     width="350" height="250" allowfullscreen="" loading="lazy"
-                     referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    width="350" height="250" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <iframe name="mapa" title="AJ Katzenmaier"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11877.33928145837!2d-87.65485621261205!3d41.90716053861899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af14860a5%3A0x5736e62f19086c62!2sNorth%20Elementary!5e0!3m2!1ses-419!2sus!4v1675482907956!5m2!1ses-419!2sus"
                     width="350" height="250" allowfullscreen="" loading="lazy"
@@ -129,8 +129,8 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16931.531041812148!2d-87.86670154457485!3d42.317174614872116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sus!4v1675483013966!5m2!1ses-419!2sus"
                     width="350" height="250" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <!-- <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16931.531041812148!2d-87.86670154457485!3d42.317174614872116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sus!4v1675483013966!5m2!1ses-419!2sus" target="mapa">South</a></p> -->
+            </div>
+            <!-- <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16931.531041812148!2d-87.86670154457485!3d42.317174614872116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sus!4v1675483013966!5m2!1ses-419!2sus" target="mapa">South</a></p> -->
             <div id="datos">
                 <p><b>Facility Type:</b> Outdoor</p>
                 <p><b>Additional Information:</b> If deemed necessary by MDHL james may be shortened or cancelled
