--- a/home.html
+++ b/home.html
@@ -24,11 +24,11 @@
         <div id="header2">
             <nav>
                 <a class="actual" href="#">Home</a>
-                <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html">Rules</a>
-                <a href="./aboutMDHL.html">About</a>
-                <a href="./registration.html">Registration</a>
-                <a href="./contact.html">Contact</a>
+                <a href="/game_info.html">Game Info</a>
+                <a href="/rules.html">Rules</a>
+                <a href="/aboutMDHL.html">About</a>
+                <a href="/registration.html">Registration</a>
+                <a href="/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -39,7 +39,7 @@
         </div>
         <div id="contenido">
             <aside>
-                    <img id="imagenaside" src="/img/hockey_1.jpg" alt="imagen2">
+                <img id="imagenaside" src="/img/hockey_1.jpg" alt="imagen2">
             </aside>
 
             <div class="section">
