--- a/registration.html
+++ b/registration.html
@@ -19,12 +19,12 @@
         </div>
         <div id="header2">
             <nav>
-                <a href="./home.html">Home</a>
-                <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html">Rules</a>
-                <a href="./aboutMDHL.html">About</a>
+                <a href="/home.html">Home</a>
+                <a href="/game_info.html">Game Info</a>
+                <a href="/rules.html">Rules</a>
+                <a href="/aboutMDHL.html">About</a>
                 <a class="actual" href="#">Registration</a>
-                <a href="./contact.html">Contact</a>
+                <a href="/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -41,7 +41,7 @@
             </aside>
             <div class="section">
                 <div>
-                    <form method="get" action="./show_data.html">
+                    <form method="get" action="/show_data.html">
                         <fieldset>
                             <legend>Personal Information</legend>
                             <div class="personal">
@@ -129,7 +129,7 @@
                             <legend>Which elementary school do you live near?</legend>
                             <h4>Closest School:</h4>
                             <div class="colums">
-                                <div  class="gap">
+                                <div class="gap">
                                     <div>
                                         <input type="radio" name="school" id="katzenmaier" value="AJ Katzenmaier">
                                         <label for="katzenmaier">AJ Katzenmaier</label>
@@ -255,7 +255,7 @@
                                 </div>
                             </div>
                         </fieldset>
-                        <input type="submit" value="Send" class="btn_reistr" >
+                        <input type="submit" value="Send" class="btn_reistr">
                     </form>
                 </div>
             </div>
