--- a/rules.html
+++ b/rules.html
@@ -19,12 +19,12 @@
         </div>
         <div id="header2">
             <nav>
-                <a href="./home.html">Home</a>
-                <a href="./game_info.html">Game Info</a>
+                <a href="/home.html">Home</a>
+                <a href="/game_info.html">Game Info</a>
                 <a class="actual" href="#">Rules</a>
-                <a href="./aboutMDHL.html">About</a>
-                <a href="./registration.html">Registration</a>
-                <a href="./contact.html">Contact</a>
+                <a href="/aboutMDHL.html">About</a>
+                <a href="/registration.html">Registration</a>
+                <a href="/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -37,7 +37,7 @@
 
         <div id="contenido">
             <aside>
-                    <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
+                <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
             </aside>
 
             <div class="section">
@@ -66,7 +66,8 @@
                                     <p>
                                         Fields used within the competition program must be
                                         a minimum of 100 x 60 yards.Leagues, districts or associations participating in
-                                        the state competition program that are unable to provide a field that meets these
+                                        the state competition program that are unable to provide a field that meets
+                                        these
                                         minimum requirements must advise the State Competition Board which will
                                         assign its Fields Committee to inspect the field and recommend to the Board
                                         whether or not a waiver of the minimum dimensions should be granted. Teams
@@ -83,8 +84,10 @@
                                     U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                                     for older age groups should be progressively larger.
                                 </li>
-                                <li class="indent">U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
-                                <li class="indent">U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
+                                <li class="indent">U-8 plays on a field 40-50 yards in length and 20-30 yards width.
+                                </li>
+                                <li class="indent">U-10 play on a field 70-80 yards in length and 40-50 yards in width.
+                                </li>
                                 <li class="indent">
                                     In addition, fields used by young age groups may have their internal
                                     dimensions and size of goal similarly modified.
@@ -105,7 +108,7 @@
                             </ul>
                         </dd>
                     </dl>
-                    
+
                 </div>
             </div>
         </div>
