--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -23,12 +23,12 @@
         </div>
         <div id="header2">
             <nav>
-                <a href="./home.html">Home</a>
-                <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html">Rules</a>
+                <a href="/home.html">Home</a>
+                <a href="/game_info.html">Game Info</a>
+                <a href="/rules.html">Rules</a>
                 <a class="actual" href="#">About</a>
-                <a href="./registration.html">Registration</a>
-                <a href="./contact.html">Contact</a>
+                <a href="/registration.html">Registration</a>
+                <a href="/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -46,14 +46,17 @@
             <div class="section">
                 <dl>
                     <dt>Mision</dt>
-                    <dd class="indent">To support young athletes living Chicago's northside neighborhood, who have an interest in
+                    <dd class="indent">To support young athletes living Chicago's northside neighborhood, who have an
+                        interest in
                         learning and playing soccer, with opportunities to learn and practice skills related to the game
                         of hockey, specifically those skills around team cooperation and good sportsmanship</dd>
                     <dt>Vision</dt>
-                    <dd class="indent">The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                    <dd class="indent">The Mighty Ducks Hockey League aspires to develop strong, well-rounded and
+                        mindful athletes
                         through the building of character, self-discipline, and leadership.</dd>
                     <dt>General Information</dt>
-                    <dd class="indent">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's
+                    <dd class="indent">The Mighty Ducks Soccer League was established in 1996 to provide athletes
+                        residing Chicago's
                         northside neighborhoods an environment in which to learn and play hockey. To be a
                         member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                         neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
