--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
         </div>
         <div id="header2">
             <nav>
-                <a href="./home.html">Home</a>
-                <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html">Rules</a>
-                <a href="./aboutMDHL.html">About</a>
-                <a href="./registration.html">Registration</a>
+                <a href="/home.html">Home</a>
+                <a href="/game_info.html">Game Info</a>
+                <a href="/rules.html">Rules</a>
+                <a href="/aboutMDHL.html">About</a>
+                <a href="/registration.html">Registration</a>
                 <a class="actual" href="#">Contact</a>
             </nav>
         </div>
