--- a/game_info.html
+++ b/game_info.html
@@ -8,23 +8,23 @@
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- diseño propio -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
         <div id="might">
-            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <img id="logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo">
             <h1>Mighty Ducks Hockey League</h1>
         </div>
         <div id="header2">
             <nav>
-                <a href="/home.html">Home</a>
+                <a href="./home.html">Home</a>
                 <a class="actual" href="#">Game Info</a>
-                <a href="/rules.html">Rules</a>
-                <a href="/aboutMDHL.html">About</a>
-                <a href="/registration.html">Registration</a>
-                <a href="/contact.html">Contact</a>
+                <a href="./rules.html">Rules</a>
+                <a href="./aboutMDHL.html">About</a>
+                <a href="./registration.html">Registration</a>
+                <a href="./contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -36,7 +36,7 @@
         </div>
         <div id="contenido">
             <aside>
-                <img id="imagenaside" src="/img/hockey_2.jpg" alt="imagen2">
+                <img id="imagenaside" src="./img/hockey_2.jpg" alt="imagen2">
             </aside>
             <div class="section">
                 <table>
