--- a/home.html
+++ b/home.html
@@ -8,27 +8,27 @@
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- diseño propio -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- diseño1 -->
-    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
+    <!-- <link rel="stylesheet" href="./css/diseno1.css"> -->
     <!-- diseño2 -->
-    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
+    <!-- <link rel="stylesheet" href="./css/diseno2.css"> -->
 </head>
 
 <body>
     <header>
         <div id="might">
-            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <img id="logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo">
             <h1>Mighty Ducks Hockey League</h1>
         </div>
         <div id="header2">
             <nav>
                 <a class="actual" href="#">Home</a>
-                <a href="/game_info.html">Game Info</a>
-                <a href="/rules.html">Rules</a>
-                <a href="/aboutMDHL.html">About</a>
-                <a href="/registration.html">Registration</a>
-                <a href="/contact.html">Contact</a>
+                <a href="./game_info.html">Game Info</a>
+                <a href="./rules.html">Rules</a>
+                <a href="./aboutMDHL.html">About</a>
+                <a href="./registration.html">Registration</a>
+                <a href="./contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -39,7 +39,7 @@
         </div>
         <div id="contenido">
             <aside>
-                <img id="imagenaside" src="/img/hockey_1.jpg" alt="imagen2">
+                <img id="imagenaside" src="./img/hockey_1.jpg" alt="imagen2">
             </aside>
 
             <div class="section">
