--- a/registration.html
+++ b/registration.html
@@ -8,23 +8,23 @@
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- diseño propio -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
         <div id="might">
-            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <img id="logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo">
             <h1>Mighty Ducks Hockey League</h1>
         </div>
         <div id="header2">
             <nav>
-                <a href="/home.html">Home</a>
-                <a href="/game_info.html">Game Info</a>
-                <a href="/rules.html">Rules</a>
-                <a href="/aboutMDHL.html">About</a>
+                <a href="./home.html">Home</a>
+                <a href="./game_info.html">Game Info</a>
+                <a href="./rules.html">Rules</a>
+                <a href="./aboutMDHL.html">About</a>
                 <a class="actual" href="#">Registration</a>
-                <a href="/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -36,12 +36,12 @@
         <div id="contenido">
             <aside>
                 <figure>
-                    <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
+                    <img id="imagenaside" src="./img/hockey_3.jpg" alt="imagen3">
                 </figure>
             </aside>
             <div class="section">
                 <div>
-                    <form method="get" action="/show_data.html">
+                    <form method="get" action="./show_data.html">
                         <fieldset>
                             <legend>Personal Information</legend>
                             <div class="personal">
