--- a/registration.html
+++ b/registration.html
@@ -86,7 +86,7 @@
                                         </div>
                                     </div> -->
 
-                                    <select name="genderS">
+                                    <select name="gender" id="gender" title="gender">
                                         <option value="" selected disabled>Select Gender</option>
                                         <option value="female">Female</option>
                                         <option value="male">Male</option>
@@ -202,7 +202,7 @@
                                 <div class="gap">
                                     <div>
                                         <input type="radio" name="size" id="s" value="Small">
-                                        <label for="hart">Small</label>
+                                        <label for="s">Small</label>
                                     </div>
                                     <div>
                                         <input type="radio" name="size" id="m" value="Medium">
